Updated follow page

--- a/user/pages/02.about/page.html
+++ b/user/pages/02.about/page.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<title>'About Troy Stories'</title>
 	<meta name="slug" content="about"/>
-	<meta name="image" content=""/>
+	<meta name="image" content="'me (smaller).jpg'"/>
 </head>
 <body>
 
