More page tweaks

--- a/user/pages/03.follow/page.html
+++ b/user/pages/03.follow/page.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<p>Look for new stories every couple of days on these fine social networks:</p>
+<p>New stories every few days on these fine social networks.</p>
 
 <div class="social">
 <ul>
@@ -17,7 +17,7 @@
 </ul>
 </div>
 
-<p>You can also reach me at: <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#x6a;&#x65;&#115;&#x73;&#x65;&#x40;&#x70;&#108;&#97;&#115;&#116;&#105;&#99;&#109;&#105;&#x6e;&#100;&#46;&#x63;&#x6f;&#x6d;">&#x6a;&#101;&#x73;&#x73;&#101;&#64;&#112;&#x6c;&#97;&#x73;&#x74;&#x69;&#99;&#x6d;&#105;&#x6e;&#x64;&#46;&#x63;&#x6f;&#x6d;</a></p>
+<p>You can reach me at: <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#x6a;&#x65;&#115;&#x73;&#x65;&#x40;&#x70;&#108;&#97;&#115;&#116;&#105;&#99;&#109;&#105;&#x6e;&#100;&#46;&#x63;&#x6f;&#x6d;">&#x6a;&#101;&#x73;&#x73;&#101;&#64;&#112;&#x6c;&#97;&#x73;&#x74;&#x69;&#99;&#x6d;&#105;&#x6e;&#x64;&#46;&#x63;&#x6f;&#x6d;</a></p>
 
 </body>
 </html>
