--- a/user/pages/02.about/page.html
+++ b/user/pages/02.about/page.html
@@ -2,17 +2,23 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>'About Troy Stories'</title>
+	<title>'About'</title>
 	<meta name="slug" content="about"/>
 	<meta name="image" content="'me (smaller).jpg'"/>
 </head>
 <body>
 
-<p>The core of creativity is authenticity. Honesty is freeing. People often feel the need to put on a show, even in business. You have to pretend like you know more than you know in order to get the job, but I feel like that’s unhealthy, but it’s often the state in which we find ourselves. So the question is: how do I deal with the way the world is currently versus what I think it ought to be, the ideology versus the pragmatism. And I tend to lean more toward ideology.</p>
+<div style="text-align: center; font-size:1.4em; font-weight:italic;padding-bottom:1em;">Jesse Gardner</div>
 
-<p>That’s why I’m talking to people and asking them to share their stories. I feel like there’s some truth in that, and it’s interesting to meet people and hear what their struggles are, and hear them put into words what they think is important in life.</p>
+<p>I believe that authenticity is the core of creativity. Honesty is freeing. Every day, people feel like they need to put on a show. Pretend you&#8217;re not hurting. Pretend you’ve got it all figured out. Pretend you know more than you know in order to get the job. It&#8217;s unhealthy, and it brought me to the question: how can I be more honest? Then I realized that part of my pretense was regarding people as I perceived them to be instead of knowing them as they really are.</p>
 
-<p>Troy’s in such an interesting place right now. There’s a lot of change happening, a lot of good and a lot of bad. And I think listening to and sharing stories helps build empathy, taking time to consider how other people think and also to find comfort in knowing you’re probably not the only person who thinks like you do. There’s someone out there who thinks like me or I never thought of it from that perspective. Empathy building exercise.</p>
+<p>That’s why I started talking to people and asking them to share their stories. I feel like there’s some truth—some authenticity—in that. It’s good to meet people and listen to their stories and hear them put into words what they think is important in life.</p>
+
+<p>Troy is such an interesting place right now, full of all different kinds of people. There’s a lot of change happening, a lot of good and a lot of bad, depending on who talk to. And I think that listening to and sharing stories at this critical moment helps build empathy.</p>
+
+<p>For some, that means taking time to consider how differently people see the world, how different the circumstances they&#8217;re facing are. For others, these stories mean finding comfort in discovering that you’re not the only person who thinks like you do, learning that there is someone out there who shares your fears or your joys.</p>
+
+<p>Consider Troy Stories an endeavor in empathy.</p>
 
 </body>
 </html>
