Fixed social icon on follow page

--- a/user/pages/03.follow/page.html
+++ b/user/pages/03.follow/page.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8"/>
 	<title>'Follow Troy Stories'</title>
 	<meta name="slug" content="follow"/>
+	<meta name="process" content="
+twig: true"/>
 </head>
 <body>
 
